welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int] ;new Array [Int](num)
      ^golomb:2: error: local variables must be initialized
  var T:Array[Int] ;new Array [Int](num)
      ^