welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T:Array[Int] ;new Array [Int](num)
  T(0)=1
  var i : Int = 2
  while (i!=num){
    for (j<- 1 to i){
      T(j)=i
      
    }
    i+=1
  } 
  return T(T.length-1)
  
}